--- a/style.css
+++ b/style.css
@@ -12,9 +12,15 @@
     width: 100vw;
 }
 
-video{
-    margin: auto;
+video
+{  
+    position: absolute ;
+    height: 100%;
+    width: 100%;
 }
+/* video{
+    margin: auto;
+} */
 
 .video-filters
 {
@@ -24,8 +30,17 @@ video{
     position: absolute;
     left: 10vh;
     top:5vh;
+    z-index: 1;
 }
 
+.filter-div
+{
+    position:absolute;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    /* z-index: -1; */
+}
 .filter
 {   
     height: 110px;
@@ -48,6 +63,7 @@ video{
     right: 10vh;
     top: 10vh;
     height: 500px;
+    z-index: 1;
 }
 
 .zoom
@@ -67,7 +83,7 @@ video{
     align-items: center;
     height: 50%;
 }
-.record,.capture,.gallery
+.record,.capture,.galleryBtn
 {   
     height: 80px;
     width: 80px;
